--- a/deploy/robots/g1_29dof/config/config.yaml
+++ b/deploy/robots/g1_29dof/config/config.yaml
@@ -17,7 +17,7 @@ FSM:
 
   Passive:
     transitions: 
-      FixStand: LT + up.on_pressed
+      FixStand: up.on_pressed
     mode: [
       1,1,1,1,1,1,
       1,1,1,1,1,1,
@@ -34,8 +34,8 @@ FSM:
     ]
   FixStand:
     transitions: 
-      Passive: LT + B.on_pressed
-      Velocity: RB + X.on_pressed
+      Passive: down.on_pressed
+      Velocity: right.on_pressed
     kp: [
       100., 100., 100., 150., 40., 40.,
       100., 100., 100., 150., 40., 40.,
@@ -62,7 +62,7 @@ FSM:
     ]
   Velocity:
     transitions: 
-      Passive: LT + B.on_pressed
+      Passive: down.on_pressed
       Mimic_Dance_102: LT(2s) + down.on_pressed
       Mimic_Gangnam_Style: LT(2s) + left.on_pressed
 
