--- a/deploy/robots/g1_29dof/config/policy/velocity/v0/params/deploy.yaml
+++ b/deploy/robots/g1_29dof/config/policy/velocity/v0/params/deploy.yaml
@@ -38,7 +38,7 @@ observations:
     clip: null
     scale: [1.0, 1.0, 1.0]
     history_length: 5
-  velocity_commands:
+  keyboard_velocity_commands:
   # keyboard_velocity_commands:
     params: {command_name: base_velocity}
     clip: null
