--- a/deploy/robots/g1_29dof/config/config.yaml
+++ b/deploy/robots/g1_29dof/config/config.yaml
@@ -63,15 +63,15 @@ FSM:
   Velocity:
     transitions: 
       Passive: down.on_pressed
-      Mimic_Dance_102: LT(2s) + down.on_pressed
-      Mimic_Gangnam_Style: LT(2s) + left.on_pressed
+      Mimic_Dance_102: right.on_pressed
+      Mimic_Gangnam_Style: left.on_pressed
 
     policy_dir: config/policy/velocity
     # policy_dir: ../../../logs/rsl_rl/unitree_g1_29dof_velocity
   Mimic_Dance_102:
     transitions: 
-      Passive: LT + B.on_pressed
-      Velocity: RB + X.on_pressed
+      Passive: down.on_pressed
+      Velocity: right.on_pressed
     fps: 60
     motion_file: config/policy/mimic/dance_102/params/G1_Take_102.bvh_60hz.csv
     policy_dir: config/policy/mimic/dance_102/
@@ -79,8 +79,8 @@ FSM:
     time_end: 24.0
   Mimic_Gangnam_Style:
     transitions: 
-      Passive: LT + B.on_pressed
-      Velocity: RB + X.on_pressed
+      Passive: down.on_pressed
+      Velocity: right.on_pressed
     fps: 60
     motion_file: config/policy/mimic/gangnam_style/params/G1_gangnam_style_V01.bvh_60hz.csv
     policy_dir: config/policy/mimic/gangnam_style/
